--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genesis</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -35,7 +35,7 @@
             <a href="#" id="log"><img src="instagram.png" width="40px" id="logimg"></a>
             <a href="#" id="log"><img src="twitter.png" width="40px" id="logimg"></a>
         </div>
-        <a href="https://skrsumit250.github.io/skrsumit250/" id="copy">&#169; 2023 Sumit Kumar. All rights reserved</a>
+        <a href="" id="copy">&#169; 2024 Tushar Yadav. All rights reserved</a>
     </footer>
 </body>
 </html>
